--- a/test.html
+++ b/test.html
@@ -1,27 +1,57 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Sample Page</title>
+    <style>
+        form label { display: block; margin-top: .5rem; }
+        input, select, textarea { display: block; width: 100%; max-width: 480px; margin: 0px; padding: 0px; }
+        button { margin-top: .75rem; }
+        input[type="radio"], input[type="checkbox"] {
+            display: inline;
+            width: auto;
+        }
+
+    </style>
 </head>
 
 <body>
-    <header>
-        <h1>My Website</h1>
-        <nav>
-            <a href="index.html">Home</a> |
-            <a href="about.html">About</a>
-        </nav>
-    </header>
-    <main>
-<p>Write tags literally: &lt;h1&gt;Title&lt;/h1&gt;</p>
-<p>Copyright &copy; 2025. All logos are &reg; of their owners.</p>
-<p>Keep words together with a&nbsp;non-breaking space.</p>
-<p>An em dash &mdash; like this — adds emphasis.</p>
-    </main>
-    <footer>
-        <p>&copy; 2025 My Website</p>
-    </footer>
+<form action="process" method="get">
+  <fieldset>
+    <legend>Contact Us</legend>
+
+    <label for="name">Name</label>
+    <input id="name" name="name" type="text" placeholder="Your full name" required minlength="2" maxlength="60">
+
+    <label for="email">Email</label>
+    <input id="email" name="email" type="email" placeholder="you@example.com" required>
+
+    <label for="topic">Topic</label>
+    <select id="topic" name="topic" required>
+      <option value="">-- Choose one --</option>
+      <option value="support">Support</option>
+      <option value="feedback">Feedback</option>
+      <option value="other">Other</option>
+    </select>
+
+    <label>
+      <input type="checkbox" name="subscribe" value="yes">
+      Subscribe to updates
+    </label>
+
+    <fieldset class="radiogroup">
+      <legend>Preferred Contact</legend>
+      <label><input type="radio" name="contact" value="email" checked> Email</label>
+      <label><input type="radio" name="contact" value="phone"> Phone</label>
+    </fieldset>
+
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="4" maxlength="500" placeholder="How can we help?" required></textarea>
+
+    <button type="submit">Send</button>
+  </fieldset>
+</form>
 </body>
 
 </html>
