--- a/test.html
+++ b/test.html
@@ -1,57 +1,30 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>Sample Page</title>
-    <style>
-        form label { display: block; margin-top: .5rem; }
-        input, select, textarea { display: block; width: 100%; max-width: 480px; margin: 0px; padding: 0px; }
-        button { margin-top: .75rem; }
-        input[type="radio"], input[type="checkbox"] {
-            display: inline;
-            width: auto;
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+      <meta charset="UTF-8">
+      <title>z-index Example</title>
+      <style>
+        .box {
+          width: 150px;
+          height: 150px;
+          position: absolute;
         }
-
-    </style>
-</head>
-
-<body>
-<form action="process" method="get">
-  <fieldset>
-    <legend>Contact Us</legend>
-
-    <label for="name">Name</label>
-    <input id="name" name="name" type="text" placeholder="Your full name" required minlength="2" maxlength="60">
-
-    <label for="email">Email</label>
-    <input id="email" name="email" type="email" placeholder="you@example.com" required>
-
-    <label for="topic">Topic</label>
-    <select id="topic" name="topic" required>
-      <option value="">-- Choose one --</option>
-      <option value="support">Support</option>
-      <option value="feedback">Feedback</option>
-      <option value="other">Other</option>
-    </select>
-
-    <label>
-      <input type="checkbox" name="subscribe" value="yes">
-      Subscribe to updates
-    </label>
-
-    <fieldset class="radiogroup">
-      <legend>Preferred Contact</legend>
-      <label><input type="radio" name="contact" value="email" checked> Email</label>
-      <label><input type="radio" name="contact" value="phone"> Phone</label>
-    </fieldset>
-
-    <label for="message">Message</label>
-    <textarea id="message" name="message" rows="4" maxlength="500" placeholder="How can we help?" required></textarea>
-
-    <button type="submit">Send</button>
-  </fieldset>
-</form>
-</body>
-
-</html>
+        .red {
+          background: red;
+          top: 40px;
+          left: 40px;
+          z-index: 2; /* higher → on top */
+        }
+        .green {
+          background: green;
+          top: 80px;
+          left: 80px;
+          z-index: 1; /* shows behind green */
+        }
+      </style>
+    </head>
+    <body>
+      <div class="box red"></div>
+      <div class="box green"></div>
+    </body>
+    </html>
